Fixed issue with header on smaller screens. Image now just hides on smaller screens.

--- a/style.css
+++ b/style.css
@@ -43,12 +43,15 @@ p{
     background-color: #B7094C;
     border: 5px solid #B7094C;
     border-radius: 5%;
-    /* display:inline; */
     max-width: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: 0.5s ease-out;
+}
 
+.icon:hover{
+    transform:translateY(-50px)
 }
 
 a{
@@ -75,10 +78,6 @@ a:hover{
     background-color: #B7094C;
     border: 1px solid #B7094C;
 }
-
-/* .card p{
-    color: white;
-} */
 
 .special{
     background-color: #B7094C;
